charts/homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/homepage`)
      services:
      - kind: Service
        name: homepage
        port: 3000
